All check box's functionally working

--- a/app/src/main/res/layout/activity_vacinations.xml
+++ b/app/src/main/res/layout/activity_vacinations.xml
@@ -679,7 +679,7 @@
         tools:ignore="MissingConstraints" />
 
     <CheckBox
-        android:id="@+id/checkBox21"
+        android:id="@+id/SwineFluBox"
         android:layout_width="27dp"
         android:layout_height="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
