--- a/app/src/main/res/layout/activity_vacinations.xml
+++ b/app/src/main/res/layout/activity_vacinations.xml
@@ -128,6 +128,28 @@
         app:layout_constraintVertical_bias="0.082"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="21dp"
+        android:layout_height="24dp"
+        android:text="?"
+        tools:layout_editor_absoluteX="112dp"
+        tools:layout_editor_absoluteY="59dp" />
+
+    <TextView
+        android:id="@+id/PCV13TextBox"
+        android:layout_width="158dp"
+        android:layout_height="75dp"
+        android:background="@color/Grey"
+        android:text="Test text box"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.83"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.378" />
+
     <TextView
         android:id="@+id/MenBText"
         android:layout_width="61dp"
