--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.832" />
 
     <EditText
-        android:id="@+id/idEdt"
+        android:id="@+id/QRname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/idIVQrcode"
@@ -57,7 +57,7 @@
         android:id="@+id/idBtnGenerateQR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/idEdt"
+        android:layout_below="@id/QRname"
         android:text="@string/generate_qr_code"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
